src/objects/QPMS__Document_Type__c.object
<CustomObject>
    <description>This is a Document Type object.</description>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <description>Holds the approves group API (DevelperName)name</description>
        <inlineHelpText>Holds the approves group API (DevelperName)name</inlineHelpText>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Authorized_Entity_Group__c</fullName>
        <label>Authorized Entity Group</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Authorized_Entity__c</fullName>
        <label>Authorized Entity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Automatically_Expire_Previous_Revision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Expire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BU1</fullName>
                </value>
                <value>
                    <fullName>BU2</fullName>
                </value>
                <value>
                    <fullName>BU3</fullName>
                </value>
                <value>
                    <fullName>BU4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Categories__c</fullName>
        <label>Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Category1</fullName>
                </value>
                <value>
                    <fullName>Category2</fullName>
                </value>
                <value>
                    <fullName>Category3</fullName>
                </value>
                <value>
                    <fullName>Category4</fullName>
                </value>
                <value>
                    <fullName>Category5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Type_Number_URL__c</fullName>
        <formula>HYPERLINK($Setup.QPMS__QC_settings__c.QPMS__URL__c+&apos;/apex/DocumentType?Id=&apos;+Id,Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Edit_Effective_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Edit Effective Date</description>
        <inlineHelpText>Edit Effective Date</inlineHelpText>
        <label>Edit Effective Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Edit_Expiration_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Edit Expiration Date</description>
        <inlineHelpText>Edit Expiration Date</inlineHelpText>
        <label>Edit Expiration Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Edit_Pre_Release_Duration_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Edit Pre Release Duration Date</description>
        <inlineHelpText>Edit Pre Release Duration Date</inlineHelpText>
        <label>Edit Pre Release Duration Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Escalation_Rule_for_Task__c</fullName>
        <label>Escalation Rule for Task</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Expire_After__c</fullName>
        <label>Expire After(In days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integration purposes</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Grace_Period_for_Release__c</fullName>
        <label>Grace Period for Release(In days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Name__c</fullName>
        <formula>QPMS__Initiating_Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiating Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <defaultValue>&apos;Global_Quality_Group&apos;</defaultValue>
        <description>Stores the logged in user site public group</description>
        <inlineHelpText>Stores the logged in user site public group</inlineHelpText>
        <label>Initiating Site Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiating Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Document Types</relationshipLabel>
        <relationshipName>Document_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Number_Scheme_Name__c</fullName>
        <formula>QPMS__Number_Scheme__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Scheme</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Number_Scheme__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Number Scheme</label>
        <referenceTo>QPMS__Number_Scheme__c</referenceTo>
        <relationshipLabel>Document Types</relationshipLabel>
        <relationshipName>Document_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Owner_Name__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; +Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Protected_Draft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Protected Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Reason__c</fullName>
        <description>Reason field for Document  Type Active and Deactive</description>
        <label>Reason</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NORTH_AMERICA</fullName>
                    <label>NORTH AMERICA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Retention_Duration__c</fullName>
        <label>Retention Duration(In days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Secondary_Format__c</fullName>
        <label>Secondary Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Autosync</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Show_All_Users_Groups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show All Users/Groups</description>
        <inlineHelpText>Show All Users/Groups</inlineHelpText>
        <label>Show All Users/Groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <description>Signed Off Details</description>
        <inlineHelpText>Signed Off Details</inlineHelpText>
        <label>Signed Off Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Start_Effectiveness_Review_In_Advance__c</fullName>
        <label>Effectiveness Review In Advance(In days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Supersede_Previous_Revision__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Supersede Previous Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <label>Title</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__View_Only_Entity_Group__c</fullName>
        <label>View Only Entity Group</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__View_Only_Entity__c</fullName>
        <label>View Only Entity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Approvers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in filed visibility section in watermark tab</description>
        <inlineHelpText>Used in filed visibility section in watermark tab</inlineHelpText>
        <label>Approvers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Color__c</fullName>
        <description>Watermark Text Color Display.</description>
        <inlineHelpText>Watermark Text Color Display.</inlineHelpText>
        <label>Watermark Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grey</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Doc_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Doc Owner filed is used in filed visibility section in watermark section tab</description>
        <label>Doc Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Doc_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in filed visibility section in watermark tab</description>
        <inlineHelpText>Used in filed visibility section in watermark tab</inlineHelpText>
        <label>Doc Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Document_Number_Revision__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Document Number &amp; Revision is used in filed visibility section in watermark tab</description>
        <inlineHelpText>Document Number &amp; Revision is used in filed visibility section in watermark tab</inlineHelpText>
        <label>Document Number &amp; Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Document_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to restrict the document status on cover page</description>
        <inlineHelpText>Used to restrict the document status on cover page</inlineHelpText>
        <label>Document Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Effective_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in filed visibility section in watermark tab</description>
        <inlineHelpText>Used in filed visibility section in watermark tab</inlineHelpText>
        <label>Effective Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Enable_Cover_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in filed visibility section watermark tab</description>
        <inlineHelpText>Used in filed visibility section watermark tab</inlineHelpText>
        <label>Enable Cover Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When TRUE a watermark will be placed on a printed document. It will also make the secondary file required to ensure a file of format PDF is available for watermarking.</description>
        <inlineHelpText>When TRUE a watermark will be placed on a printed document. It will also make the secondary file required to ensure a file of format PDF is available for watermarking.</inlineHelpText>
        <label>Enable Watermark</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Expiration_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in filed visibility section in watermark tab</description>
        <inlineHelpText>Used in filed visibility section in watermark tab</inlineHelpText>
        <label>Expiration Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Layout_Footer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true watermark will be placed at the bottom of every page</description>
        <inlineHelpText>When true watermark will be placed at the bottom of every page</inlineHelpText>
        <label>Footer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Layout_Header__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true watermark will be placed at the top of every page</description>
        <inlineHelpText>When true watermark will be placed at the top of every page</inlineHelpText>
        <label>Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Layout_Left__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true watermark will be placed on the left of every page</description>
        <inlineHelpText>When true watermark will be placed on the left of every page</inlineHelpText>
        <label>Left (vertically)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Layout_Right__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true watermark will be placed on the right of every page</description>
        <inlineHelpText>When true watermark will be placed on the right of every page</inlineHelpText>
        <label>Right (vertically)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Page_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in filed visibility section watermark tab</description>
        <inlineHelpText>Used in filed visibility section watermark tab</inlineHelpText>
        <label>Page Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Printed_By__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in filed visibility section in watermark tab</description>
        <inlineHelpText>Used in filed visibility section in watermark tab</inlineHelpText>
        <label>Printed By</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Printed_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in filed visibility section in watermark tab</description>
        <inlineHelpText>Used in filed visibility section in watermark tab</inlineHelpText>
        <label>Printed Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in filed visibility section watermark tab</description>
        <inlineHelpText>Used in filed visibility section watermark tab</inlineHelpText>
        <label>Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Text_Also_Diagonal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables displaying text diagonally, behind everything on each, large, and at about 50% opacity.</description>
        <inlineHelpText>Enables displaying text diagonally, behind everything on each, large, and at about 50% opacity.</inlineHelpText>
        <label>Display Diagonally</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Text__c</fullName>
        <defaultValue>&quot;Confidential – Printed for reference only&quot;</defaultValue>
        <description>Text will be displayed on &quot;Printed&quot; documents that have been watermarked. Additional text will be appended containing dynamic information</description>
        <inlineHelpText>Text will be displayed on &quot;Printed&quot; documents that have been watermarked. Additional text will be appended containing dynamic information</inlineHelpText>
        <label>Watermark Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Watermark_Valid_Duration__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Number of days a printed document can remain valid .  If this value is set to 3 and the document is printed on 17-Jan-2017 the watermark will display &quot;Valid Until: 20-Jan-2017&quot; unless the document expires sooner in which case the watermark will display the expiration date</description>
        <inlineHelpText>Number of days a printed document can remain valid .  If this value is set to 3 and the document is printed on 17-Jan-2017 the watermark will display &quot;Valid Until: 20-Jan-2017&quot; unless the document expires sooner in which case the watermark will display th</inlineHelpText>
        <label>Valid Duration (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__isEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEditable</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Type</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Title__c</columns>
        <columns>QPMS__Owner_Name__c</columns>
        <columns>QPMS__Status__c</columns>
        <columns>QPMS__Number_Scheme__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>QPMS__isEditable__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>QPMS__Noelles</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>QPMS__Title__c</columns>
        <columns>QPMS__Status__c</columns>
        <columns>QPMS__Number_Scheme__c</columns>
        <columns>QPMS__isEditable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QPMS__Owner_Name__c</field>
            <operation>contains</operation>
            <value>Noelle Ong</value>
        </filters>
        <label>Noelle&apos;s Doc Types</label>
    </listViews>
    <nameField>
        <displayFormat>DT-{00000}</displayFormat>
        <label>Document Type Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>QPMS__Allow_Only_One_Watermark_Layout</fullName>
        <active>true</active>
        <description>Only allow one watermark layout to be selected selected (checked to TRUE) at once</description>
        <errorConditionFormula>(IF(QPMS__Watermark_Layout_Footer__c, 1, 0) +
IF(QPMS__Watermark_Layout_Header__c, 1, 0) +
IF(QPMS__Watermark_Layout_Right__c, 1, 0) +
IF(QPMS__Watermark_Layout_Left__c, 1, 0)
) &gt; 1</errorConditionFormula>
        <errorMessage>Only one layout can be selected at one time</errorMessage>
    </validationRules>
</CustomObject>